--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "npm-watch": "^0.11.0"
   }
 }
